<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/order_cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textSize="12sp"
        android:text="@string/order_cancel"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/order_menu_name"
        android:layout_margin="5dp"
        android:background="@drawable/cancel_button"/>

    <TextView
        android:id="@+id/order_menu_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/order_menu_name"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@id/order_cancel"
        app:layout_constraintEnd_toStartOf="@+id/order_menu_unit"
        android:background="@drawable/text_stroke"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/order_menu_unit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/order_menu_unit"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/order_menu_price"
        android:background="@drawable/text_stroke"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/order_menu_price"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/order_menu_price"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/text_stroke"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
